--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "styled-components": "^4.3.2"
   },
   "scripts": {
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -43,6 +45,8 @@
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^1.7.0",
+    "gh-pages": "^2.1.1",
     "prettier": "^1.18.2"
-  }
+  },
+  "homepage": "http://lukassxp.github.io/pdf-signaturer/"
 }
